<resources>
    <string name="app_name">Cinemattic</string>

    <string name="black_panther_title">Black Panther</string>
    <string name="black_panther_year" translatable="false">2018</string>
    <string name="black_panther_details">After his father\'s death, T\'Challa returns home to Wakanda to inherit his throne. However, a powerful enemy related to his family threatens to attack his nation.</string>

    <string name="goonies_title">The Goonies</string>
    <string name="goonies_year" translatable="false">1985</string>
    <string name="goonies_description">A group of west coast kids facing their last days together before a development paves over their homes stumble onto evidence of pirate\'s treasure attracting the attention of a family of criminals.</string>

    <string name="starwars7_title">Star Wars: Episode VII</string>
    <string name="starwars7_year" translatable="false">2015</string>
    <string name="starwars7_details">A new order threatens to destroy the New Republic. Finn, Rey and Poe, backed by the Resistance and the Republic, must find a way to stop them and find Luke, the last surviving Jedi.</string>

    <string name="btn_details">Details</string>
    <string name="chсkbox_favorite">Favorite</string>
    <string name="commentary_hint">Enter your comment</string>
    <string name="btn_Back">Back</string>
    <string name="btnShare">Share</string>
    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="snackbar_favorites_removed">Movie removed from favorites</string>
    <string name="snackbar_favorites_added">Movie added to Favorites</string>
    <string name="undo">Undo</string>
    <string name="default_network_error_msg">Could not get items</string>
    <string name="retry">Retry</string>
    <string name="notificationChannelName">Watch later reminder</string>
    <string name="notificationChannelDescription">Receive notifications to watch movies later</string>
    <string name="timePickerTitle">Set time for reminder</string>
    <string name="dateDialogTitle">Set date for reminder</string>
    <string name="movieDescriptionError">Could not load movie details. Please check your Internet connection</string>

</resources>