<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?textAppearanceHeadline4"
            android:textColor="?colorOnBackground"
            tools:text="@tools:sample/cities" />

        <TextView
            android:id="@+id/detailsYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsTitle"
            android:layout_marginStart="16dp"
            android:textAppearance="?textAppearanceBody2"
            android:textColor="?colorOnBackground"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/detailsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsYear"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="?textAppearanceBody1"
            tools:text="@tools:sample/lorem" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsDescription"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/chсkbox_favorite" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentaryLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/commentary_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/commentaryLayout"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btnShare" />

        <Button
            android:id="@+id/btnBack"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnShare"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_Back" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
