<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Poster-->
                <ImageView
                    android:id="@+id/poster1"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster_bpanther" />


                <!--Title and year-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/title1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/black_panther_title"
                            android:textAppearance="?textAppearanceHeadline6"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/black_panther_year"
                            android:textAppearance="?textAppearanceBody2" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/detailsBtn1"
                        style="?borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/btn_details" />
                </LinearLayout>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Poster-->
                <ImageView
                    android:id="@+id/poster2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster_goonies" />


                <!--Title and year-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/title2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/goonies_title"
                            android:textAppearance="?textAppearanceHeadline6"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/goonies_year"
                            android:textAppearance="?textAppearanceBody2" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/detailsBtn2"
                        style="?borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/btn_details" />
                </LinearLayout>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Poster-->
                <ImageView
                    android:id="@+id/poster3"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster_starwars7" />


                <!--Title and year-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/title3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/starwars7_title"
                            android:textAppearance="?textAppearanceHeadline6"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/starwars7_year"
                            android:textAppearance="?textAppearanceBody2" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/detailsBtn3"
                        style="?borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/btn_details" />
                </LinearLayout>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>
</ScrollView>